kubernetes/overlays/dev/webserver-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
spec:
  replicas: 1
  template:
    spec:
      volumes:
      - name: airflow-dags
        persistentVolumeClaim:
          claimName: lcls-airflow-dev--dags
      - name: airflow-plugins
        persistentVolumeClaim:
          claimName: lcls-airflow-dev--plugins
      - name: airflow-logs
        persistentVolumeClaim:
          claimName: lcls-airflow-dev--logs

---
