kubernetes/overlays/dev/messagebus-patch.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/address-pool: internal
    metallb.universe.tf/allow-shared-ip: lcls-airflow-dev
  name: redis

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-primary
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: redis-primary
        command:
        - redis-server
        - "/config/redis.conf"
        volumeMounts:
        - name: redis-data
          mountPath: /data
        - name: config
          mountPath: /config
          readOnly: true
      volumes:
      - name: config
        secret:
          secretName: redis
          items:
          - key: redis-config
            path: redis.conf
  volumeClaimTemplates:
  - metadata:
      name: redis-data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 5Gi
      storageClassName: lcls-airflow-dev--redis
